--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
+    <link rel="icon" type="image/x-icon" href="images/logo.svg">
     <link rel="stylesheet" href="css/style.css">
     <title>Aperture</title>
 
@@ -67,6 +67,64 @@
             </p>
         </article>
     </section>
+    <section class="sunset">
+        <article>
+            <h4>
+                Sunset at Mount Fuji
+            </h4>
+            <p>
+                Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.
+            </p>
+        </article>
+    </section>
+    <section class="sunset monstera">
+        <article>
+            <h4>
+                Monstera Leafs
+            </h4>
+            <p>
+                Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.
+            </p>
+        </article>
+    </section>
+    <section class="clients">
+        <div class="container">
+            <h2>
+                Past clients
+            </h2>
+            <h3>
+                Trusted by your favourite companies
+            </h3>
+            <div class="flex_block">
+                <a href="#">
+                    <img src="images/hillehayes.svg" alt="client">
+                </a>
+                <a href="#">
+                    <img src="images/riksgrasen.svg" alt="client">
+                </a>
+                <a href="#">
+                    <img src="images/studiocai.svg" alt="client">
+                </a>
+                <a href="#">
+                    <img src="images/chillindusties.svg" alt="client">
+                </a>
+                <a href="#">
+                    <img src="images/stockholm.svg" alt="client">
+                </a>
+            </div>
+        </div>
+    </section>
+    <section class="sunset himalayas">
+        <article>
+            <h4>
+                Star fall in the Himalayas
+            </h4>
+            <p>
+                Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut
+                ligula.
+            </p>
+        </article>
+    </section>
     <section class="section">
         <div class="container">
             <h2>
@@ -75,13 +133,125 @@
             <p>
                 We're here for you!
             </p>
-            <a class="item" href="#" >
+            <a class="item" href="#">
                 Get in touch
             </a>
         </div>
     </section>
-    <script src="https://kit.fontawesome.com/4ba67cb7e3.js" crossorigin="anonymous">
-    </script>
+    <footer>
+        <div class="container">
+            <div class="logo">
+                <a href="#">
+                    <img src="images/hillehayes.svg" alt="client">
+                </a>
+                <p>
+                    Photographers & videographers capturing the world around us.
+                </p>
+            </div>
+            <div class="links">
+                <nav>
+                    <ul>
+                        <li>
+                            Business areas
+                        </li>
+                        <li>
+                            <a href="#">
+                                Product Photography
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Architecture Photography
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Drone Photography
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Wildlife Photography
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <nav>
+                    <ul>
+                        <li>
+                            Pages
+                        </li>
+                        <li>
+                            <a href="#">
+                                Gear cage
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Featured images
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Contact
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Style guide
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Instructions
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Changelog
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="container">
+                <div class="subscribe">
+                    <h3>Subscribe to our newsletter</h3>
+                    <p>Read about all the things we do.</p>
+                </div>
+                <div class="form">
+                    <form name="subscribe" action="#" method="post">
+                        <div>
+                            <label for="subscribe"></label>
+                            <input type="text" name="E-Mail"
+                                   placeholder="E-Mail"
+                                   id="subscribe">
+                            <input type="submit" value="subscribe">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="footer">
+                <div>
+                    <p>© Aperture Photography, Inc. All rights reserved.</p>
+                    <a href="#">
+                        Licensing.
+                    </a>
+                </div>
+                <div class="socialnetwork">
+                    <a href="#">
+                        <img src="images/twitter.svg" alt="socialnetwork">
+                    </a>
+                    <a href="#">
+                        <img src="images/instagram.svg" alt="socialnetwork">
+                    </a>
+                    <a href="#">
+                        <img src="images/facebook.svg" alt="socialnetwork">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </main>
 </body>
 </html>
