--- a/index.html
+++ b/index.html
@@ -138,120 +138,112 @@
             </a>
         </div>
     </section>
-    <footer>
+</main>
+<footer>
+    <div class="container">
+        <div class="logo">
+            <a href="#">
+                <img src="images/hillehayes.svg" alt="client">
+            </a>
+            <p>
+                Photographers & videographers capturing the world around us.
+            </p>
+        </div>
+        <div class="links">
+                <ul>
+                    <li>
+                        Business areas
+                    </li>
+                    <li>
+                        <a href="#">
+                            Product Photography
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Architecture Photography
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Drone Photography
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Wildlife Photography
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        Pages
+                    </li>
+                    <li>
+                        <a href="#">
+                            Gear cage
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Featured images
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Contact
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Style guide
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Instructions
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Changelog
+                        </a>
+                    </li>
+                </ul>
+        </div>
         <div class="container">
-            <div class="logo">
+            <div class="subscribe">
+                <h3>Subscribe to our newsletter</h3>
+                <p>Read about all the things we do.</p>
+            </div>
+            <form name="subscribe" action="#" method="post">
+                <label for="subscribe"></label>
+                <input type="text" name="E-Mail"
+                       placeholder="E-Mail"
+                       id="subscribe">
+                <input type="submit" value="subscribe">
+            </form>
+        </div>
+        <div class="bottom">
+            <div>
+                <p>© Aperture Photography, Inc. All rights reserved.</p>
                 <a href="#">
-                    <img src="images/hillehayes.svg" alt="client">
+                    Licensing.
                 </a>
-                <p>
-                    Photographers & videographers capturing the world around us.
-                </p>
             </div>
-            <div class="links">
-                <nav>
-                    <ul>
-                        <li>
-                            Business areas
-                        </li>
-                        <li>
-                            <a href="#">
-                                Product Photography
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Architecture Photography
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Drone Photography
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Wildlife Photography
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <nav>
-                    <ul>
-                        <li>
-                            Pages
-                        </li>
-                        <li>
-                            <a href="#">
-                                Gear cage
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Featured images
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Contact
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Style guide
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Instructions
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Changelog
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="container">
-                <div class="subscribe">
-                    <h3>Subscribe to our newsletter</h3>
-                    <p>Read about all the things we do.</p>
-                </div>
-                <div class="form">
-                    <form name="subscribe" action="#" method="post">
-                        <div>
-                            <label for="subscribe"></label>
-                            <input type="text" name="E-Mail"
-                                   placeholder="E-Mail"
-                                   id="subscribe">
-                            <input type="submit" value="subscribe">
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="footer">
-                <div>
-                    <p>© Aperture Photography, Inc. All rights reserved.</p>
-                    <a href="#">
-                        Licensing.
-                    </a>
-                </div>
-                <div class="socialnetwork">
-                    <a href="#">
-                        <img src="images/twitter.svg" alt="socialnetwork">
-                    </a>
-                    <a href="#">
-                        <img src="images/instagram.svg" alt="socialnetwork">
-                    </a>
-                    <a href="#">
-                        <img src="images/facebook.svg" alt="socialnetwork">
-                    </a>
-                </div>
+            <div class="socialnetwork">
+                <a href="#">
+                    <img src="images/twitter.svg" alt="socialnetwork">
+                </a>
+                <a href="#">
+                    <img src="images/instagram.svg" alt="socialnetwork">
+                </a>
+                <a href="#">
+                    <img src="images/facebook.svg" alt="socialnetwork">
+                </a>
             </div>
         </div>
-    </footer>
-</main>
+    </div>
+</footer>
 </body>
 </html>
