--- a/index.html
+++ b/index.html
@@ -73,6 +73,58 @@
             <li>Iceland</li>
         </ul>
     </section>
+    <section class="specializations">
+        <div class="container">
+            <h2>What we do.</h2>
+            <h3>The areas that we're specialized in.</h3>
+            <div class="servises">
+                <article class="product">
+                    <div>
+                    <h4>Product Photography</h4>
+                    <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit.
+                        Etiam
+                        ut orci varius, faucibus libero ac, cursus quam.</p>
+                    <a href="#">
+                        Read more
+                    </a>
+                    </div>
+                </article>
+                <article class="architecture">
+            <div>
+                    <h4>Architecture Photography</h4>
+                    <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra,
+                        ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit
+                        amet rhoncus leo imperdiet nec.</p>
+                    <a href="#">
+                        Read more
+                    </a>
+        </div>
+                </article>
+                <article class="drone">
+                    <div>
+                    <h4>Drone Photography</h4>
+                    <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a
+                        vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor
+                        hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                    <a href="#">
+                        Read more
+                    </a>
+                    </div>
+                </article>
+                <article class="wildlife">
+                    <div>
+                    <h4>Wildlife Photography</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et
+                        faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus
+                        congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
+                    <a href="#">
+                        Read more
+                    </a>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
     <section class="sunset">
         <article>
             <h4>
