--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Aperture</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/logo.svg">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Aperture</title>
-
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
 <header>
@@ -160,6 +162,15 @@
             <h3>
                 Trusted by your favourite companies
             </h3>
+            <div class="owl-carousel" style="color: white">
+                <div> Your Content </div>
+                <div> Your Content </div>
+                <div> Your Content </div>
+                <div> Your Content </div>
+                <div> Your Content </div>
+                <div> Your Content </div>
+                <div> Your Content </div>
+            </div>
             <div class="flex_block">
                 <a href="#">
                     <img src="images/hillehayes.svg" alt="client">
@@ -313,5 +324,8 @@
         </div>
     </div>
 </footer>
+<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JLqSTELeR4TLqP00G9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
