--- a/index.html
+++ b/index.html
@@ -163,16 +163,7 @@
             <h3>
                 Trusted by your favourite companies
             </h3>
-            <div class="owl-carousel" style="color: white">
-                <div> Your Content </div>
-                <div> Your Content </div>
-                <div> Your Content </div>
-                <div> Your Content </div>
-                <div> Your Content </div>
-                <div> Your Content </div>
-                <div> Your Content </div>
-            </div>
-            <div class="flex_block">
+            <div class="flex_block owl-carousel">
                 <a href="#">
                     <img src="images/hillehayes.svg" alt="client">
                 </a>
